--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -47,4 +47,4 @@ jobs:
       should-execute: |
         ${{ (needs.yay.result == 'success' || needs.yay.result == 'skipped') &&
         (needs.yay2.result == 'success' || needs.yay2.result == 'skipped') &&
-        && needs.changes.outputs.all == 'true'}}
+        needs.changes.outputs.all == 'true'}}
