--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,12 +33,14 @@ jobs:
 
   test-echo:
     runs-on: ubuntu-latest
-    needs: [changes, yay]
+    needs: [changes, yay, yay2]
     env:
       RESULT: ${{ needs.yay.result == 'success' || needs.yay.result == 'skipped' }}
+      RESULT2: ${{ needs.yay2result == 'success' || needs.yay2.result == 'skipped' }}
     steps:
     - run: |
         echo $RESULT
+        echo $RESULT2
 
   test:
     uses: ./.github/workflows/_test.yml
